--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,12 @@
 @import "tailwindcss";
 
+::-webkit-scrollbar {
+  display: none; 
+}
+* {
+  scrollbar-width: none; 
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
